:bug: Fix mobile layout issues.

--- a/app/styles/layout/_content.scss
+++ b/app/styles/layout/_content.scss
@@ -81,8 +81,10 @@
 
   .detail__post {
     flex: 1 1 auto;
+    width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     @media screen and (min-width: map-get($screens, sm)) {
       max-width: 84.5rem;
